src/sass/background.scss
$font: "Montserrat", sans-serif;
$desktop-bg-path: "../img/psx_gradient_bg_landscape.svg";
$mobile-bg-path:  "../img/psx_gradient_bg_portrait.svg";
$bg-color: #2d2d74;

html {
    background-color: $bg-color;
    background-repeat: no-repeat;
    background-position: center;
    background-position-y: top;
    background-size: 100vw 100vh;
    font-family: "Montserrat", sans-serif;
    max-width: 100vw;
    overflow-x: hidden;
}

h1 {
    display: inline-block;
    padding: 8px 30px;
    font-family: "Assistant";
    font-weight: 800;
    color: #ffffff;
    letter-spacing: 0.05em;
    text-transform: uppercase;
    border: 2px solid #5965ef;
    background: radial-gradient(#3a48d2, #0c0d1e);
    text-shadow: 0px 2px 3px #000000;
    font-size: 2.5em;
}

@media (orientation: landscape) {
    html {
        background-image: url($desktop-bg-path);
    }
}

@media (orientation: portrait) {
    html {
        background-image: url($mobile-bg-path);
    }
}

